--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "expenses-chart-component",
+  "homepage": "https://abizmo.github.io/expenses-chart-component",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build --base=./",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
